<resources>
    <string name="app_name">Swap</string>
    <!--swap app live key-->
    <string name="branch_key_live">key_live_nnwp9DzHR7FQGCgQdkCLKfjoxzjLirVk</string>
    <!-- test keys-->
    <!--<string name="branch_key_live">key_live_hkDytPACtipny3N9XmnbZlapBDdj4WIL</string>
    <string name="branch_key_test">key_test_lguFJ6uxNN8ULZeun0EiQnehsupHg5YQ</string>-->
    <integer name="AutoDeeplinkRequestCode">000</integer>

    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="privacy_policy">By Signing in you agree to our privacy policy*</string>
    <string name="splashbottomtext">Copyright© 2017 Swap Inc.</string>
    <string name="signUpNameTitle">What\'s your name?</string>
    <string name="usernameShouldBeNotEmpty">Username should not be  empty</string>
    <string name="passwordShouldNotBeEmpty">Password should not be empty</string>
    <string name="next"><![CDATA[Next  >]]></string>
    <string name="back"><![CDATA[<  Back]]></string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="lastNameShouldNotBeEmpty">Last name should not be empty</string>
    <string name="firstNameShouldNotBeEmpty">First name should not be empty</string>
    <string name="connect_social_media">Connect Social Media</string>
    <string name="got_it">Got It!</string>
    <string name="title_activity_sign_up_dob">SignUpDOBActivity</string>
    <string name="email">Email</string>
    <string name="signUpTitle">Sign Up</string>
    <string name="emailShouldNotBeEmpty">Email should not be empty</string>
    <string name="pleaseEnterValidEmail">Please enter valid email</string>
    <string name="selectDate">Select Date</string>
    <string name="whenYourBirthday">When\'s your birthday?</string>
    <string name="willNotBeSwappedWithoutPermission">*Will not be swapped without permission</string>
    <string name="chooseYourUsername">Choose your Username</string>
    <string name="username">Username</string>
    <string name="yourUsernameShouldNotBeEmpty">Your username should not be empty.</string>
    <string name="usernameIsTakenTryAnother">Username is taken, try another.</string>
    <string name="usernameAvailable">Username available</string>
    <string name="showPassword">Show password</string>
    <string name="signUpPasswordShouldNotBeEmpty">Password should not be empty</string>
    <string name="signUpPassword">Password</string>
    <string name="phoneNumber">Phone number</string>
    <string name="phoneNumberShouldNotBeEmpty">Phone number should not be empty</string>
    <string name="sendCodeAgain">Send Code Again</string>
    <string name="confirmAccount">Confirm Account</string>
    <string name="user_name_phone_number">Username/Phone number</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="ok">Ok</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_verification_code">Enter verification code sent to your number</string>
    <string name="done"><![CDATA[Done >]]></string>
    <string name="hide_password">Hide password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password_changed">Your password has been changed</string>
    <string name="success">Success</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swap">Swap</string>
    <string name="theFastestWayToTrulyConnect">The fastest way to truly connect</string>
    <string name="welcomeToSwap">Welcome to Swap!</string>
    <string name="leftSwipeToContinue">Left swipe to continue</string>
    <string name="connectSocialMediaByClickingOnThem">Connect social media by clicking on\nthem and logging in through their\nwebsites.</string>
    <string name="mediasThatAreHiglightedBlue">Medias that are highlighted blue are the\nones that are shared. Cannect by scanning a\nSwap code.</string>
    <string name="openTheScannerByPressing">Open the scanner by pressing the Swap\nbutton or swiping up.</string>
    <string name="searchYourFriendAndView">Search your friends and view their Swap\nprofiles</string>
    <string name="interactWithDifferentSocialMedia">Interact with different social media by\nclicking on its icon.</string>
    <string name="youCanMakeYourAccountPrivate">You can make your account private in\nsettings to deny or accept any Swap.</string>
    <string name="continueSwap">Continue</string>
    <string name="startUsingSwap">Start using Swap</string>
    <string name="setPicture"><![CDATA[Set Picture >]]></string>
    <string name="skip">Skip</string>
    <string name="selectPicture">Select Picture</string>
    <string name="profile">PROFILE</string>
    <string name="editProfile">Edit Profile</string>
    <string name="account">ACCOUNT</string>
    <string name="connectSocialMedias">Connect Social Medias</string>
    <string name="privateAccount">Private Account</string>
    <string name="logOut">Log Out</string>
    <string name="about">ABOUT</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="middleName">Middle Name</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="moreInfo">More Info..</string>
    <string name="moreInfoTitle">More Info</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailId">Email id</string>
    <string name="change">Change</string>
    <string name="basic">Basic</string>
    <string name="birthday">Birthday</string>
    <string name="birthdayDate">Select Date</string>
    <string name="sorry">Sorry</string>
    <string name="ageValidationAlert">You must be at least 13 years old to use Swap.</string>
    <string name="signUpPasswordShouldBeMin">Sign Up password should be minimum 6 characters</string>
    <string name="tap_to_edit_bio">Tap To Edit Bio</string>
    <string name="settings">Settings</string>
    <string name="points">Points</string>
    <string name="swaps">Swaps</string>
    <string name="swapped">Swapped</string>
    <string name="pleaseCheckInternetConnection">Please Check internet connection</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_swap">Welcome to Swap!</string>
    <string name="short_tutorial">Would you like to go through a short tutorial?</string>
    <string name="usernameShouldNotBeAcceptSpace">Username should not be accept space</string>
    <string name="pleaseEnterValidPassword">Please choose a password with at least 1 digit , 1 lower case, 1 upper case and 1 special character and there is not allowed space in password.</string>
    <string name="pleaseAddYourDOB">Please add your date of birth</string>
    <string name="spacesAreNotAllowed">Spaces are not allowed</string>
    <string name="pleaseAddConfirmationCode">Please add confirmation code</string>
    <string name="pleaseAddCompleatConfirmationCode">Please add complete confirmation code</string>

    <string name="alert_exit">Your swap points will reset and you will have to reconnect your social medias if you sign out</string>
    <string name="copyLink">Copy Link</string>
    <string name="sentRequest">Sent Requests</string>
    <string name="swapRequest">Swap Requests</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>

    <!-- update pic-->
    <string name="take_photo">Take Photo</string>
    <string name="chooseFromLIb">Choose From Library </string>
    <string name="selectfile">Select File</string>
    <string name="Cancel">Cancel</string>
    <string name="somethingwentwrong">Something Went Wrong</string>
    <string name="takePhoto">Take Photo</string>
    <string name="choooseFromLibrary">Choose from gallery</string>
    <string name="uvsnap">Upload profile picture</string>
    <string name="areYouSure">Are You Sure?</string>
    <string name="search">Search</string>
    <string name="loading">Loading..</string>
    <string name="UsernamesMustBeAtLeastOneCharacter">Usernames must be at least one character</string>
    <string name="UsernamesMustBeLessThanCharacters">Usernames must be less than 18 characters</string>
    <string name="requested">Requested</string>
    <string name="invalidURL">Please enter a valid website url</string>
    <string name="camera_permission">Needs Camera permission to read QR codes</string>
    <string name="no_swap_requests">No Swap Requests :\'(</string>
    <string name="swapRequests">Swap Requests</string>
    <string name="noUserFound">No user found</string>
    <string name="noHistoryFound">No History Found :\'(</string>
    <string name="internalServerIssue">Internal server issue please try again</string>
    <string name="contactPermissions">Contacts Permissions</string>
    <string name="contactPermissionsMessege">Please grant read/write access to Phone Contacts in order to Swap</string>
    <string name="pintrestAlertMessage">If you\'ve already logged in to Pinterest on Web Browser, and you need to login with a different account, please first go to Pinterest Home and logout from there.</string>
    <string name="pintrestAlertTitle">Pinterest</string>
</resources>
