<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.swap.views.activities.EditProfileActivity">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.swap.utilities.RoundedImageView
                android:id="@+id/imageViewEditProfileImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/profile_picture_default_icon" />

            <TextView
                android:id="@+id/textViewChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/change"
                android:textColor="@color/colorVividCyan" />

            <TextView
                android:id="@+id/textViewMoreInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:text="@string/moreInfo"
                android:textColor="@color/colorVividCyan" />

            <TextView
                android:id="@+id/textViewBasic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightGray"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:text="@string/basic"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"
                android:textStyle="bold" />

            <!-- First Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/firstName"
                    android:inputType="textVisiblePassword|textCapSentences"
                    android:maxLength="30"
                    android:paddingBottom="20dp"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Last Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/lastName"
                    android:inputType="textVisiblePassword|textCapSentences"
                    android:maxLength="30"
                    android:paddingBottom="20dp"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Last Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/emailId"
                    android:inputType="textEmailAddress"
                    android:maxLength="100"
                    android:paddingBottom="20dp"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textViewBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightGray"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:text="@string/birthday"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/birthdayDate"
                    android:inputType="date"
                    android:maxLength="30"
                    android:paddingBottom="20dp"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
