<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorVividCyan"
                tools:context="com.swap.views.activities.SignUpUsernameActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewChooseYourUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:text="@string/chooseYourUsername"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_white">

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="@android:color/transparent"    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLength="30"
                android:paddingLeft="10dp"
                android:textColor="@color/colorVividCyan"
                android:textSize="14sp"/>

            <View
                android:id="@+id/viewUserAvailability"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorRed"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="left"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
